--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,9 @@
         <form id="grade_form">
         </form>
 
+        <p><span id="status"></span></p>
         <p>Average: <span id="average"></span></p>
+
 
         <script src="script.js"></script>
 
